# garib

./: README.md  garam.py  main.py  pyproject.toml  testing.py
GARIB/: badtimes.txt  garib.py  testing.py
GARIBE/: garibe.py  testing.py
docs/source/: conf.py  index.rst
examples/: badtimes.txt  example.ipynb
